--- a/web/css/glyph/tray.css
+++ b/web/css/glyph/tray.css
@@ -13,7 +13,7 @@
     top: 50%;
     right: 4px;
     transform: translateY(-50%);
-    z-index: 100001; /* Above system drawer (100000) */
+    z-index: 100002;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
